Foreground Service volledig werkend

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FiliiHub</string>
+    <string name="socket_url">https://www.ishetfiliikotopen.be</string>
 </resources>
